apps/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    istio-injection: disabled
