apps/keycloak/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: keycloak
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
